          10  0101' .  {+} - new feature
          01  01'  .1  {#} - bug-fix
          0:  10   00  {^} - improvement
          :.  1    10  {-} - removed
          .   1    0:
              0.    :.
              .     .

--=========================( NEW SETTINGS AND FILES )==============================-

    NEW slftp.ini parameter(s):
      parse_boxofficemojo_always=0 entry was removed

    1. compare your slftp.ini with the provided one in /config folder
    2. update your helpfiles with the provided ones in /helpfiles folder
    3. update your slftp.imdbcountries file with the provided one in /config folder
    4. update your OpenSSL libraries to version 1.1.1
    5. enjoy!

--==============================( KNOWN BUGS )====================================-

    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Statsoutput sometimes screwed -> NEGATIVE BYTES (due to parsing of x-dupe response)
    Dirlist confusion on linux development builds causing wrong skip files output (#265)

--=============================( SLFTP v1.5.8 )===================================-
    {+} Reverse FXP can be enabled by command !reversefxp (#9)
    {+} cryptconf functionality integrated into slftp as command line utility, see 'slftp(.exe) --help' (#298)
    {+} Pure-FTPd support (#303)
    {+} Added OpenSSL 1.1.1 support (OpenSSL 1.0.2 no longer supported) (#90)
    {#} Fix 'No such directory' error flood if a subdir was deleted during a race (#200)
    {#} Fix not working pretime check retry (settings readd_attempts, readd_interval of [taskpretime])
    {#} Setting !maxupdn 1 0 1 to leech only pres did not work
    {^} New code for IMDb and Box Office Mojo website parsing
    {^} Slightly improved behaviour for STV/Wide/Limited determination
    {^} Less unnecessary 'tell your developer' messages to the admin channel
    {^} Improved detection of FTPD software and version
    {^} Send PBSZ command (Pure-FTPd requires it)
