@@ -396,8 +396,10 @@ default_pretime=600
 url=http://127.0.0.1/pretime.php?text=%s
 
 [dirlist]
-# files which shouldn't be added to dirlist; those files/dirs never will be traded because they are unknown for slftp
+# files which shouldn't be added to dirlist; those files never will be traded because they are unknown for slftp
 global_skip=^(tvmaze|imdb)\.nfo$|\-missing$|\-offline$|^\.|^file\_id\.diz$|\.htm$|\.html|\.bad$|([^\w].*DONE\s\-\>\s\d+x\d+[^\w]*)|\[IMDB\]\W+
+# directories which shouldn't be added to dirlist; those directories never will be traded because they are unknown for slftp
+global_skip_dir=([^\w].*DONE\s\-\>\s\d+x\d+[^\w]*)|\[IMDB\]\W+|\[TvMaze\]\W+|\(.+COMPLETE.+\)|\[.+[Cc]omplete.+\]
 # global setting for skip being uploaded files on FTPd
 # Allowed values:
 # 0: Skip 0byte files (files which are in the process of being transferred very soon by someone)
